# Diplom-3.0

./: .gitignore  README.md  app.py  requirements.txt
heat-analytics/: .gitignore  README.md  pyproject.toml
heat-analytics/backend/: __init__.py  main.py
heat-analytics/backend/analytics/: __init__.py  anomaly.py  clustering.py  features.py  regression.py  timeseries.py
heat-analytics/backend/config/: __init__.py  norms.yaml  settings.py  thresholds.json
heat-analytics/backend/models/: __init__.py  analysis.py  audit.py  building.py  reading.py
heat-analytics/backend/routers/: __init__.py  analysis.py  buildings.py  export.py  results.py  upload.py
heat-analytics/backend/services/: __init__.py  analytics_runner.py  db.py  parser.py  report_generator.py
heat-analytics/data/: weather_abakan.csv
src/: analytics.py  loader.py  preprocess.py
tests/: test_system.py
