[tool.poetry]
name = "heat-analytics"
version = "0.1.0"
description = "System for analyzing heat consumption in multi-apartment buildings"
authors = ["Student <student@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
aiosqlite = "^0.19.0"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
statsmodels = "^0.14.1"
prophet = "^1.1.5"
scipy = "^1.12.0"
openpyxl = "^3.1.2"
apscheduler = "^3.10.4"
structlog = "^24.1.0"
python-multipart = "^0.0.6"
weasyprint = "^60.1"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^24.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=backend --cov-report=term-missing"
